<resources>
    <string name="app_name">MovieSearch</string>
    <string name="posters_links">Постеры взяты с сайта https://www.movieposters.com/</string>
    <string name="button1">Главная</string>
    <string name="button2">Избранное</string>
    <string name="button3">Фильмы</string>
    <string name="button4">Сериалы</string>
    <string name="button5">Настройки</string>
    <string name="menu_settings">Параметры</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_selections">Подборки</string>
    <string name="menu_watch_later">Смотреть позже</string>
    <string name="toolBar_title">Поиск</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главный экран</string>
    <string name="menu_home_title_text">Главная</string>
    <string name="menu_settings_title_text">Настройкcи</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>
</resources>